@@ -292,10 +292,8 @@ int cl_r2k::inst_mul(t_mem code) {
 }
 
 int cl_r2k::inst_rl_de(t_mem code) {
-  TYPE_UWORD  tmp = (regs.F & BIT_C) >> BITPOS_C;
-  tmp |= (regs.DE << 1);
-  
   regs.F = (regs.F & ~BIT_C) | (((regs.DE >> 15) & 1U) << BITPOS_C);
+  regs.DE = (regs.DE << 1) | ((regs.F & BIT_C) >> BITPOS_C);
   
   if (regs.DE & 0x8000)
     regs.F |= BIT_S;
@@ -307,10 +305,8 @@ int cl_r2k::inst_rl_de(t_mem code) {
 }
 
 int cl_r2k::inst_rr_de(t_mem code) {
-  TYPE_UWORD  tmp = (regs.F & BIT_C) << (15 - BITPOS_C);
-  tmp |= (regs.DE >> 1);
-  
   regs.F = (regs.F & ~BIT_C) | ((regs.DE & 1) << BITPOS_C);
+  regs.DE = (regs.DE >> 1) | ((regs.F & BIT_C) << (15 - BITPOS_C));
   
   if (regs.DE & 0x8000)
     regs.F |= BIT_S;
@@ -323,10 +319,8 @@ int cl_r2k::inst_rr_de(t_mem code) {
 
 int cl_r2k::inst_rr_hl(t_mem code)    // RR HL
 {
-  TYPE_UWORD  tmp = (regs.F & BIT_C) << (15 - BITPOS_C);
-  tmp |= (regs.HL >> 1);
-  
   regs.F = (regs.F & ~BIT_C) | ((regs.HL & 1) << BITPOS_C);
+  regs.HL = (regs.HL >> 1) | ((regs.F & BIT_C) << (15 - BITPOS_C));
   
   if (regs.HL & 0x8000)
     regs.F |= BIT_S;
